[gd_scene load_steps=26 format=2]

[ext_resource path="res://sprites/Attack.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://sprites/Idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/Walk.png" type="Texture" id=4]
[ext_resource path="res://animations/Enemyidle.tres" type="Animation" id=5]
[ext_resource path="res://animations/EnemyWalk.tres" type="Animation" id=6]
[ext_resource path="res://animations/EnemyRun.tres" type="Animation" id=7]
[ext_resource path="res://animations/EnemyAttack.tres" type="Animation" id=8]
[ext_resource path="res://sprites/hud_vida.tres" type="Theme" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 58 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Walk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "AttackEnemy"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=18]
states/AttackEnemy/node = SubResource( 8 )
states/AttackEnemy/position = Vector2( 700, 53 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 230, 73 )
states/run/node = SubResource( 10 )
states/run/position = Vector2( 391, 150 )
transitions = [ "idle", "run", SubResource( 20 ), "run", "idle", SubResource( 21 ), "idle", "AttackEnemy", SubResource( 22 ), "run", "AttackEnemy", SubResource( 24 ), "AttackEnemy", "idle", SubResource( 25 ), "AttackEnemy", "run", SubResource( 26 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.556863, 0.0666667, 0.0666667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.133333, 0.00784314, 0.00784314, 1 )

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -2, 1 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 50, 50 )
shape = SubResource( 2 )

[node name="Walk" type="Sprite" parent="."]
visible = false
position = Vector2( 30, -20 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 4 )
hframes = 6

[node name="Idle" type="Sprite" parent="."]
position = Vector2( 30, -20 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 3 )
hframes = 4

[node name="Attack" type="Sprite" parent="."]
visible = false
position = Vector2( 30, -20 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 1 )
hframes = 9

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/AttackEnemy = ExtResource( 8 )
anims/RESET = SubResource( 4 )
anims/idle = ExtResource( 5 )
anims/run = ExtResource( 7 )
anims/walk = ExtResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 19 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -47.0
margin_top = -105.0
margin_right = 50.0
margin_bottom = -91.0
theme = ExtResource( 9 )
custom_styles/fg = SubResource( 27 )
custom_styles/bg = SubResource( 28 )
value = 100.0
percent_visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
